--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,19 @@
 /* write your override styles here */
+.tag-1 {
+    display: block;
+}
+#wall #tag-2 {
+    display: block;
+}
+div#wall #tag-3.slick {
+    display: block;
+}
+#wall #tag-4 {
+    display: block;
+}
+div#wall .parent #tag-5.slick {
+    display: block;
+}
+div#wall div.parent div:last-child div#tag-6 {
+    display
+}
